--- a/src/styles.css
+++ b/src/styles.css
@@ -32,13 +32,14 @@ main {
 .search-box {
   width: 100%;
   margin: 0 0 75px;
+  align-content: center;
 }
 
 .search-box .search-bar {
   display: block;
-  width: 100%;
+  width: 60%;
   padding: 15px;
-
+  margin-left: 30px;
   appearance: none;
   background: none;
   border: none;
@@ -46,18 +47,19 @@ main {
 
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 0px 0px 16px 16px;
-  margin-top: 3px;
+  margin-top: 3.5px;
 
-  box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 1.6px 5px rgba(0, 0, 0, 0.2);
 
   color: #313131;
   font-size: 20px;
 
-  transition: 0.4s ease;
+  transition: 0.4s ease-in-out;
 }
 
 .search-box .search-bar:focus {
   background-color: rgba(255, 255, 255, 0.75);
+  transform: translate(50px);
 }
 
 .location-box .location {
@@ -80,28 +82,35 @@ main {
 .weather-box {
   text-align: center;
 }
+.weather-box .weather {
+  font-family: "Lobster", cursive;
+  color: #fff;
+  font-size: 32px;
+  font-weight: 770;
+  text-shadow: 13px 13px rgba(50, 50, 70, 0.67);
+}
 
 .weather-box .temp {
   position: relative;
   display: inline-block;
   margin: 30px auto;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 16px;
+  background-color: rgba(205, 205, 205, 0.19);
+  border-radius: 20px 0px 20px;
 
-  padding: 15px 25px;
+  padding: 15px 25px 10px 23px;
 
   color: #fff;
-  font-size: 102px;
-  font-weight: 900;
+  font-size: 100px;
+  font-weight: 800;
 
-  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+  text-shadow: 12px 16px rgba(50, 50, 70, 0.5);
   text-align: center;
-  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 23px 6px rgba(0, 0, 0, 0.2);
 }
-
+/* 
 .weather-box .weather {
   color: #fff;
   font-size: 48px;
   font-weight: 700;
-  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
-}
+
+} */
