--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "montseratt", sans-serif;
+  font-family: "Lobster", cursive;
 }
 
 .app {
@@ -23,8 +23,8 @@ main {
   min-height: 100vh;
   background-image: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.2),
-    rgba(0, 0, 0, 0.75)
+    rgba(9, 9, 9, 0.1),
+    rgba(9, 9, 9, 0.59)
   );
   padding: 25px;
 }
@@ -40,8 +40,6 @@ main {
   width: 60%;
   padding: 15px;
   margin-left: 30px;
-  appearance: none;
-  background: none;
   border: none;
   outline: none;
 
@@ -49,7 +47,7 @@ main {
   border-radius: 0px 0px 16px 16px;
   margin-top: 3.5px;
 
-  box-shadow: 1.6px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 1.6px 5px rgba(0, 0, 0, 0.3);
 
   color: #313131;
   font-size: 20px;
@@ -57,7 +55,7 @@ main {
   transition: 0.4s ease-in-out;
 }
 
-.search-box .search-bar:focus {
+.search-box .search-bar:hover {
   background-color: rgba(255, 255, 255, 0.75);
   transform: translate(50px);
 }
@@ -88,6 +86,7 @@ main {
   font-size: 32px;
   font-weight: 770;
   text-shadow: 13px 13px rgba(50, 50, 70, 0.67);
+  margin-bottom: 10px;
 }
 
 .weather-box .temp {
@@ -107,10 +106,13 @@ main {
   text-align: center;
   box-shadow: 23px 6px rgba(0, 0, 0, 0.2);
 }
-/* 
-.weather-box .weather {
-  color: #fff;
-  font-size: 48px;
-  font-weight: 700;
-
-} */
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  color: white;
+  font-family: "Lobster", cursive;
+  text-shadow: 13px 13px rgba(50, 50, 70, 0.67);
+  opacity: 0.6;
+}
