--- a/src/styles.css
+++ b/src/styles.css
@@ -3,11 +3,22 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+p.day-of-week {
+  font-size: 2rem;
+}
 body {
   font-family: "Lobster", cursive;
 }
-
+div.body {
+  float: left;
+}
+div.upcoming-weather-card {
+  margin-left: 75%;
+  /* margin-right: 15px; */
+  color: #fff;
+  font-size: 0.9rem;
+  font-weight: bolder;
+}
 .app {
   background-image: url("https://wexnermedical.osu.edu/-/media/images/wexnermedical/blog/2020-stories/01/frostbite-eyes/coldeyessafety_large.jpg?la=en&hash=62E689D9387017C8221BF3594229C366854EACED");
   background-size: cover;
